# enclaves

./: .crates.toml  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  abcchallenge  bacon.toml  builder.Dockerfile  control-plane.Dockerfile  docker-compose.yml  enclave.Dockerfile  mini-e3.Dockerfile  mock-provisioner.Dockerfile  package-lock.json  todo.md  vsock-proxy.Dockerfile
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/fixtures/: test-installer-update.json
.github/workflows/: alert-on-synthetic-failure.yml  build-and-deploy-acme-server-staging.yml  deploy-control-plane-image-production.yml  deploy-control-plane-image-staging.yml  deploy-data-plane-binary-production.yml  deploy-data-plane-binary-staging.yml  deploy-runtime-installer-production.yml  deploy-runtime-installer-staging.yml  deploy-runtime-installer.yml  lint-and-test-cli.yml  lint-and-test-control-plane.yml  lint-and-test-data-plane.yml  lint.yml  publish-storage-client-interface.yml  publish-synthetic-metrics-prod.yml  publish-synthetic-metrics-staging.yml  run-cage-synthetic-production.yml  run-cage-synthetic-staging.yml  test-acme-server-yml  test-acme-server.yml  test-control-plane.yml  test-data-plane.yml  test-e2e.yml  test-runtime-builder.yml  test-shared-lib.yml  test-storage-client-interface.yml  vsock-proxy.yml
acme-server/: Cargo.toml  Dockerfile
acme-server/src/: configuration.rs  error.rs  lib.rs  main.rs  server.rs
cage-cli/: Cargo.toml  sample-user.Dockerfile
cage-cli/src/: enclave.rs  lib.rs  main.rs  nitro-cli-image.Dockerfile
cage-cli/src/cli/: build.rs  mod.rs
cage-cli/src/docker/: enclave_builder.rs  mod.rs  parse.rs  utils.rs
control-plane/: Cargo.toml  Dockerfile
control-plane/src/: acme_account_details.rs  acme_server.rs  cert_proxy.rs  config_server.rs  configuration.rs  dns.rs  dnsproxy.rs  e3_client.rs  e3proxy.rs  egress_proxy.rs  egressproxy.rs  enclave_connection.rs  error.rs  health.rs  internal_dns.rs  lib.rs  main.rs  mod.rs  orchestration.rs  stats_client.rs  stats_proxy.rs  tls_proxy.rs
control-plane/src/acme/: account_details.rs  error.rs  jws.rs  mod.rs
control-plane/src/clients/: cert_provisioner.rs  mod.rs  mtls_config.rs  sns.rs
control-plane/src/clients/storage/: mod.rs  s3.rs
control-plane/src/mocks/: mod.rs  storage_client_mock.rs
control-plane/src/stats/: client.rs  mod.rs  proxy.rs
crates/: .crates2.json
crates/control-plane/: Cargo.toml  Dockerfile
crates/data-plane/: Cargo.toml  README.md
crates/shared/: Cargo.toml
crates/storage-client-interface/: Cargo.toml  README.md
crates/storage-client-interface/src/: lib.rs  s3.rs
crates/vsock-proxy/: Cargo.toml  README.md
crates/vsock-proxy/src/: main.rs  net.rs
data-plane/: Cargo.toml  README.md
data-plane/src/: cache.rs  config_client.rs  configuration.rs  connection.rs  enclavedns.rs  error.rs  health.rs  lib.rs  main.rs  protect.rs  stats.rs  stats_client.rs
data-plane/src/acme/: account.rs  authorization.rs  cert.rs  client.rs  directory.rs  error.rs  helpers.rs  jws.rs  key.rs  lock.rs  mod.rs  order.rs  provider.rs  raw_cert.rs
data-plane/src/acme/mocks/: client_mock.rs  mod.rs
data-plane/src/base_tls_client/: error.rs  mod.rs  server_cert_verifier.rs  tls_client_config.rs
data-plane/src/cert_provisioner_client/: mod.rs  tls_verifier.rs
data-plane/src/crypto/: api.rs  attest.rs  common.rs  e3client.rs  mem.rs  mod.rs  parser.rs  rand.rs  stream.rs  token.rs
data-plane/src/dns/: cache.rs  egress_proxy.rs  egressproxy.rs  enclave_dns.rs  enclavedns.rs  error.rs  mod.rs
data-plane/src/e3client/: error.rs  mock.rs  mod.rs  tls_verifier.rs
data-plane/src/env/: client.rs  mod.rs
data-plane/src/health/: agent.rs  diagnostic.rs  initialized.rs  mod.rs  notify_shutdown.rs
data-plane/src/mocks/: config_client_mock.rs
data-plane/src/server/: data_plane_server.rs  error.rs  mod.rs  server.rs  tcp.rs  tls.rs  vsock.rs
data-plane/src/server/cert/: mod.rs  self_signed.rs
data-plane/src/server/http/: mod.rs  parse.rs
data-plane/src/server/layers/: attest.rs  auth.rs  context_log.rs  decrypt.rs  forward.rs  mod.rs
data-plane/src/server/tls/: cert_resolver.rs  inter_ca_retreiver.rs  mod.rs  tls_server.rs  trusted_cert_container.rs
data-plane/src/stats/: client.rs  mod.rs  proxy.rs  server.rs
data-plane/src/time/: mod.rs
data-plane/src/utils/: mod.rs  nsm.rs  trx_handler.rs
e2e-tests/: Dockerfile  apiKeyAuthTests.js  customerProcess.js  e2e.js  feature-context.json  generate-sample-ca.sh  health-check-tests.js  httpCustomerProcess.js  mockCertProvisionerApi.js  mockCryptoApi.js  noAuthTests.js  noTlsTests.js  package-lock.json  package.json  run-all-feature-tests.sh  run-local-cage.sh  run-tls-disabled-tests.sh  run.sh  websocketTests.js  wsCustomerProcess.js
e2e-tests/acme-key/: key.pem
e2e-tests/mock-crypto/: Cargo.toml
e2e-tests/mock-crypto/src/: encrypt_mock.rs  main.rs
e2e-tests/sample-ca/: sample-intermediate-cert.pem  sample-intermediate-key.pem  (+2 more)
installer/: Dockerfile  README.md  action.yml  test-abyss.Dockerfile  test-alpine.Dockerfile  test.Dockerfile
mini-e3/: Cargo.toml
mini-e3/src/: main.rs
node-vsock-parent/: index.mjs  package-lock.json  package.json
performance-testing/: artillery.yaml
runtime/: Dockerfile  run-user-entrypoint.sh  user-entrypoint.sh
scripts/: export-dev-env-vars.sh  health-check.sh  insert-data-plane-version.sh  start-cage.sh  update-installer-version.sh  update-installer-verson.sh  update-runtime-version.sh
shared/: Cargo.toml
shared/src/: bridge.rs  lib.rs  logging.rs  notify_shutdown.rs  stats.rs  utils.rs
shared/src/acme/: account_details.rs  error.rs  jws.rs
shared/src/client/: mod.rs
shared/src/mocks/: storage_client_mock.rs
shared/src/rpc/: error.rs  request.rs
shared/src/server/: cert.rs  config_server.rs  diagnostic.rs  egress.rs  error.rs  health.rs  mod.rs  proxy_protocol.rs  sni.rs  tcp.rs  vsock.rs
tests/: Dockerfile  customerProcess.js  e2e.js  package-lock.json  package.json  run.sh
(+89 files in other folders)
