[package]
name = "acme-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
shared = { path = "../shared" }
hyper = { version = "0.14.4", features = ["server", "http1", "tcp" ] }
thiserror = "1.0"
tokio = { version = "1.24.2", features = ["macros"] }
