[package]
name = "cage-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.18.2", features = ["rt","macros","fs"] }
tokio-util = { version = "0.6", features = ["full"] }
bollard = "0.12"
futures-util = "0.3.21"
flate2 = "1.0.24"
tar = "0.4.38"
hyper = "0.14.19"
bytes = "1"
