[package]
name = "cage-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.18.2", features = ["rt","rt-multi-thread","macros","fs"] }
tokio-util = { version = "0.6", features = ["full"] }
bytes = "1"
itertools = "0.10.3"
