[package]
name = "cage-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.18.2", features = ["rt","rt-multi-thread","macros","fs"] }
tokio-util = { version = "0.6", features = ["full"] }
bytes = "1"
itertools = "0.10.3"
tempfile = "3.3.0"
futures-core = "0.3.21"
futures = "0.3.21"
human-panic = "1.0.3"
log = "0.4.17"
env_logger = "0.9.0"
atty = "0.2.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
