[package]
authors = ["Evervault <engineering@evervault.com>"]
edition = "2021"
name = "control-plane"
version = "0.1.0"

[dependencies]
aws-config = "0.55.0"
aws-sdk-sns = "0.25.0"
aws-types = "0.55.0"
bytes = "1"
cadence = "0.29.0"
cadence-macros = "0.29.0"
ctrlc = {version = "3.2.3", features = ["termination"]}
dashmap = "4.0.2"
deadpool = {version = "0.9.5", default-features = false, features = ["managed"]}
dns-message-parser = {version = "~0.6.0"}
hyper = {version = "0.14.4", features = ["server", "client", "http1", "tcp"]}
lazy_static = "1.4.0"
rand = {version = "0.8.5"}
rustls-pemfile = "1.0.1"
semver = "1.0.17"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
shared = {path = "../shared"}
thiserror = "1.0"
tls-parser = "*"
tokio = {version = "1.24.2", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "time", "fs"]}
tokio-rustls = {version = "0.23.4", features = ["dangerous_configuration"]}
tokio-vsock = {version = "0.3.2", optional = true}
trust-dns-resolver = {version = "*"}

[dev-dependencies]
ppp = "2.2.0"
tokio-test = "0.4.2"

[features]
default = []
enclave = ["dep:tokio-vsock", "shared/enclave"]
network_egress = ["shared/network_egress"]
not_enclave = ["network_egress"]
