[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"
authors = ["Evervault <engineering@evervault.com>"]

[dependencies]
tokio = { version = "1.24.2", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "time", "fs"] }
dashmap = "4.0.2"
trust-dns-resolver = { version = "*" }
dns-message-parser = { version = "~0.6.0" }
bytes = "1"
thiserror = "1.0"
tokio-vsock = { version = "0.3.2", optional = true }
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"] }
tls-parser = "*"
shared = { path = "../shared" }
rand = { version = "0.8.5" }
ctrlc = { version = "3.2.3", features = ["termination"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
hyper = { version = "0.14.4", features = ["server", "client", "http1", "tcp" ] }
lazy_static = "1.4.0"
rustls-pemfile = "1.0.1"
aws-config = "0.55.0"
aws-types = "0.55.0"
aws-sdk-sns = "0.28.0"
aws-sdk-s3 = "0.28.0"
semver = "1.0.17"
cadence = "0.29.0"
cadence-macros = "0.29.0"
async-trait = "0.1.56"
mockall = "0.11.4"
log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_warn"] }

[dev-dependencies]
tokio-test = "0.4.2"
ppp = "2.2.0"

[features]
default = []
network_egress = ["shared/network_egress"]
enclave = ["dep:tokio-vsock", "shared/enclave"]
not_enclave = ["network_egress"]