[package]
name = "data-plane"
version = "0.0.0-dev"
edition = "2021"

[dependencies]
hyper = { version = "0.14.4", features = ["server","http1","http2","tcp","stream","client"] }
tokio = { version = "1.18.0", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "time"] }
memsec = { version = ">=0.5", default-features = false }
openssl = { version = "0.10.36", features = ["vendored"] }
chrono =  { version = "0.4.22", default-features = false }
aws-nitro-enclaves-nsm-api = "0.2.1"
aws-nitro-enclaves-cose = "0.5.0"
serde_cbor = "0.11"
lazy_static = "1.4.0"
async-trait = "0.1.56"
thiserror = "1.0"
bytes = "1"
nom = { version = "7.1.1", optional = true }
tokio-util = { version = "0.6", features = ["full"] }
futures = "0.3.21"
dns-message-parser = { version = "0.6.0", optional = true }
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"] }
tokio-vsock = { version = "0.3.2", optional = true }
tls-parser = { version = "0.11.0", optional = true }
shared = { path = "../shared", default-features = false }
dashmap = { version = "4.0.2", optional = true }
serde = { version = "1.0.142", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0.83"
sha2 = "0.10.2"
rcgen = { version = "0.9.2", features = ["x509-parser"], optional = true }
rand = { version = "0.8.5", optional = true }
webpki-roots = "0.22.4"
pem = "1.1.0"
base64 = "0.13.0"

[dev-dependencies]
tokio-test = "0.4.2"

[features]
default = ["tls_termination"]
tls_termination = ["dep:nom", "dep:rcgen"]
network_egress = ["dep:dns-message-parser","dep:rand", "dep:tls-parser", "dep:dashmap"]
enclave = ["dep:tokio-vsock", "shared/enclave"]
not_enclave = []
