[package]
name = "data-plane"
version = "1.0.0-beta"
edition = "2021"
authors = ["Evervault <engineering@evervault.com>"]

[dependencies]
hyper = { version = "0.14.4", features = ["server","http1","http2","tcp","stream","client"] }
tokio = { version = "1.24.2", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "time"] }
openssl = { version = "0.10.55", features = ["vendored"] }
chrono =  { version = "0.4.22", default-features = false, features = ["serde"]}
aws-nitro-enclaves-nsm-api = "0.2.1"
aws-nitro-enclaves-cose = "0.5.0"
serde_cbor = "0.11"
lazy_static = "1.4.0"
async-trait = "0.1.56"
thiserror = "1.0"
bytes = "1"
nom = { version = "7.1.1", optional = true }
tokio-util = { version = "0.6", features = ["full"] }
futures = "0.3.21"
dns-message-parser = { version = "0.6.0", optional = true }
tokio-rustls = { version = "0.24.1", features = ["dangerous_configuration"] }
tokio-vsock = { version = "0.3.2", optional = true }
shared = { path = "../shared", default-features = false }
dashmap = { version = "5.4.0", optional = true }
serde = { version = "=1.0.180", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0.83"
sha2 = "0.10.2"
rand = { version = "0.8.5" }
webpki-roots = "0.25.2"
pem = "1.1.0"
base64 = "0.13.0"
once_cell = "1.17.0"
cached = "0.42.0"
sys-info = "0.9.1"
cadence = "0.29.0"
cadence-macros = "0.29.0"
tokio-retry = "0.3.0"
httparse = "1.8.0"
mockall = "0.11.4"
uuid = { version = "1.4.1", features = ["v4"] }
log = { version = "0.4.19", features = ["max_level_debug"] }
rlimit = { version = "0.10.1", optional = true }
hyper-rustls = { version = "0.24.1", default-features = false, features = ["http1","http2","tls12","tokio-runtime"] }
chrono-tz = { version = "0.8.3" }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["catch-panic"] }
hickory-proto = "0.24.0"
libc = "0.2.150"

[dev-dependencies]
tokio-test = "0.4.2"
yup-hyper-mock = "6.0.0"

[features]
default = ["tls_termination"]
tls_termination = ["dep:nom"]
network_egress = ["dep:dns-message-parser", "dep:dashmap", "shared/network_egress"]
enclave = ["dep:tokio-vsock", "shared/enclave", "dep:rlimit"]
not_enclave = []
release_logging = ["log/release_max_level_info"]
