[package]
name = "mini-e3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
shared = { path = "../shared" }
serde = "1.0.193"
base64 = "0.21.5"
hyper = { version = "1.0.1", features = ["full"] }
http-body-util = "0.1.0"
bytes = "1.5.0"
hyper-util = { version = "0.1.1", features = ["full"] }
tokio-vsock = { version = "0.3.2", optional = true }
rlimit = "0.10.1"

[features]
default = []
enclave = ["dep:tokio-vsock"]
