[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
rmp-serde = "0.15.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_derive = "1.0.119"
serde_json = "1.0.61"
thiserror = "1.0.25"
hyper = { version = "0.14.4", features = ["server","http1","http2","tcp","stream","client"] }
tokio = { version = "1.18.0", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "time"] }
async-trait = "0.1.56"
tokio-vsock = { version = "0.3.2", optional = true }
lazy_static = "1.4.0"
derive_builder = "0.12.0"

[lib]
name = "shared"
path = "src/lib.rs"
doc = true
crate-type = ["lib"]

[features]
default = []
enclave = ["dep:tokio-vsock"]
