[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Evervault <engineering@evervault.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
rmp-serde = "1.1.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_derive = "1.0.119"
serde_json = "1.0.61"
thiserror = "1.0.25"
hyper = { version = "0.14.4", features = ["server","http1","http2","tcp","stream","client"] }
tokio = { version = "1.24.2", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "time"] }
async-trait = "0.1.56"
tokio-vsock = { version = "0.3.2", optional = true }
lazy_static = "1.4.0"
derive_builder = "0.12.0"
chrono = "0.4.23"
rand = "^0.8"
tls-parser = { version = "0.11.0", optional = true }
ppp = { version = "2.2.0" }
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"] }
sys-info = "0.9.1"
cadence = "0.29.0"
httparse = "1.8.0"
openssl = { version = "0.10.48", features = ["vendored"] }
base64 = "0.13.0"


[dev-dependencies]
tokio-test = "0.4.2"

[lib]
name = "shared"
path = "src/lib.rs"
doc = true
crate-type = ["lib"]

[features]
default = []
network_egress = ["dep:tls-parser"]
enclave = ["dep:tokio-vsock"]
