[package]
name = "mock-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = { version = "0.1.3", registry="evervault-rust-libraries", features=["vendored-openssl"] }
axum = "0.5.16"
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
tokio = {version="1.18.0", features=["macros", "rt-multi-thread"]}
lazy_static = "1.4.0"
serde_json = "1.0.87"
serde = "1.0.147"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
serde_cbor = "0.11.2"
